--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,18 +4,36 @@
     <integer-array name="bm1000_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
-        <item>1</item> <item>20</item> <item>45</item>       <item>840</item> <item>45</item>
-        <item>2</item> <item>210</item> <item>70</item>       <item>660</item> <item>70</item>
-        <item>3</item> <item>360</item> <item>45</item>       <item>510</item> <item>45</item>
-        <item>4</item> <item>20</item> <item>141</item>       <item>840</item> <item>141</item>
-        <item>5</item> <item>350</item> <item>141</item>       <item>550</item> <item>141</item>
-        <item>6</item> <item>10</item> <item>220</item>       <item>850</item> <item>220</item>
-        <item>7</item> <item>180</item> <item>220</item>       <item>700</item> <item>220</item>
-        <item>8</item> <item>210</item> <item>220</item>       <item>600</item> <item>220</item>
-        <item>9</item> <item>425</item> <item>220</item>       <item>425</item> <item>220</item>
-        <item>10</item> <item>100</item> <item>307</item>       <item>760</item> <item>307</item>
-        <item>11</item> <item>190</item> <item>307</item>       <item>650</item> <item>307</item>
-        <item>12</item> <item>250</item> <item>307</item>       <item>450</item> <item>307</item>
+        <item>1</item> <item>12</item> <item>15</item>       <item>280</item> <item>15</item>
+        <item>2</item> <item>67</item> <item>32</item>       <item>214</item> <item>32</item>
+        <item>3</item> <item>119</item> <item>27</item>       <item>165</item> <item>27</item>
+        <item>4</item> <item>5</item> <item>53</item>       <item>279</item> <item>53</item>
+        <item>5</item> <item>115</item> <item>53</item>       <item>165</item> <item>53</item>
+        <item>6</item> <item>3</item> <item>73</item>       <item>283</item> <item>73</item>
+        <item>7</item> <item>47</item> <item>73</item>       <item>233</item> <item>73</item>
+        <item>8</item> <item>88</item> <item>73</item>       <item>195</item> <item>73</item>
+        <item>9</item> <item>142</item> <item>73</item>       <item>141</item> <item>73</item>
+        <item>10</item> <item>31</item> <item>102</item>       <item>252</item> <item>102</item>
+        <item>11</item> <item>80</item> <item>102</item>       <item>203</item> <item>102</item>
+        <item>12</item> <item>119</item> <item>102</item>       <item>162</item> <item>102</item>
+
+    </integer-array>
+
+    <integer-array name="bm2000_coordinates">
+        <!--                        LEFT  HAND                          RIGHT   HAND      -->
+        <!--hold number     X coord         Y coord                 X coord        Y coord    -->
+        <item>1</item> <item>12</item> <item>15</item>       <item>840</item> <item>45</item>
+        <item>2</item> <item>67</item> <item>32</item>       <item>660</item> <item>70</item>
+        <item>3</item> <item>119</item> <item>27</item>       <item>510</item> <item>45</item>
+        <item>4</item> <item>7</item> <item>47</item>       <item>840</item> <item>141</item>
+        <item>5</item> <item>117</item> <item>47</item>       <item>550</item> <item>141</item>
+        <item>6</item> <item>3</item> <item>73</item>       <item>850</item> <item>220</item>
+        <item>7</item> <item>60</item> <item>73</item>       <item>700</item> <item>220</item>
+        <item>8</item> <item>70</item> <item>73</item>       <item>600</item> <item>220</item>
+        <item>9</item> <item>142</item> <item>73</item>       <item>425</item> <item>220</item>
+        <item>10</item> <item>31</item> <item>102</item>       <item>760</item> <item>307</item>
+        <item>11</item> <item>63</item> <item>102</item>       <item>650</item> <item>307</item>
+        <item>12</item> <item>83</item> <item>102</item>       <item>450</item> <item>307</item>
 
     </integer-array>
 
