--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,36 +4,107 @@
     <integer-array name="bm1000_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
-        <item>1</item> <item>12</item> <item>15</item>       <item>280</item> <item>15</item>
+        <item>1</item> <item>12</item> <item>15</item>       <item>279</item> <item>15</item>
         <item>2</item> <item>67</item> <item>32</item>       <item>214</item> <item>32</item>
         <item>3</item> <item>119</item> <item>27</item>       <item>165</item> <item>27</item>
-        <item>4</item> <item>5</item> <item>53</item>       <item>279</item> <item>53</item>
-        <item>5</item> <item>115</item> <item>53</item>       <item>165</item> <item>53</item>
+        <item>4</item> <item>5</item> <item>52</item>       <item>279</item> <item>52</item>
+        <item>5</item> <item>115</item> <item>52</item>       <item>165</item> <item>52</item>
         <item>6</item> <item>3</item> <item>73</item>       <item>283</item> <item>73</item>
         <item>7</item> <item>47</item> <item>73</item>       <item>233</item> <item>73</item>
         <item>8</item> <item>88</item> <item>73</item>       <item>195</item> <item>73</item>
         <item>9</item> <item>142</item> <item>73</item>       <item>141</item> <item>73</item>
-        <item>10</item> <item>31</item> <item>102</item>       <item>252</item> <item>102</item>
+        <item>10</item> <item>31</item> <item>102</item>       <item>251</item> <item>102</item>
         <item>11</item> <item>80</item> <item>102</item>       <item>203</item> <item>102</item>
         <item>12</item> <item>119</item> <item>102</item>       <item>162</item> <item>102</item>
 
     </integer-array>
 
+
     <integer-array name="bm2000_coordinates">
         <!--                        LEFT  HAND                          RIGHT   HAND      -->
         <!--hold number     X coord         Y coord                 X coord        Y coord    -->
-        <item>1</item> <item>12</item> <item>15</item>       <item>840</item> <item>45</item>
-        <item>2</item> <item>67</item> <item>32</item>       <item>660</item> <item>70</item>
-        <item>3</item> <item>119</item> <item>27</item>       <item>510</item> <item>45</item>
-        <item>4</item> <item>7</item> <item>47</item>       <item>840</item> <item>141</item>
-        <item>5</item> <item>117</item> <item>47</item>       <item>550</item> <item>141</item>
-        <item>6</item> <item>3</item> <item>73</item>       <item>850</item> <item>220</item>
-        <item>7</item> <item>60</item> <item>73</item>       <item>700</item> <item>220</item>
-        <item>8</item> <item>70</item> <item>73</item>       <item>600</item> <item>220</item>
-        <item>9</item> <item>142</item> <item>73</item>       <item>425</item> <item>220</item>
-        <item>10</item> <item>31</item> <item>102</item>       <item>760</item> <item>307</item>
-        <item>11</item> <item>63</item> <item>102</item>       <item>650</item> <item>307</item>
-        <item>12</item> <item>83</item> <item>102</item>       <item>450</item> <item>307</item>
+        <item>1</item> <item>0</item> <item>47</item>       <item>285</item> <item>47</item>
+        <item>2</item> <item>59</item> <item>39</item>       <item>224</item> <item>39</item>
+        <item>3</item> <item>115</item> <item>29</item>       <item>170</item> <item>29</item>
+        <item>4</item> <item>115</item> <item>50</item>       <item>115</item> <item>50</item>
+        <item>5</item> <item>163</item> <item>50</item>       <item>163</item> <item>50</item>
+        <item>6</item> <item>-4</item> <item>71</item>       <item>282</item> <item>71</item>
+        <item>7</item> <item>31</item> <item>71</item>       <item>249</item> <item>71</item>
+        <item>8</item> <item>59</item> <item>71</item>       <item>222</item> <item>71</item>
+        <item>9</item> <item>94</item> <item>71</item>       <item>187</item> <item>71</item>
+        <item>10</item> <item>137</item> <item>71</item>       <item>138</item> <item>71</item>
+        <item>11</item> <item>-4</item> <item>102</item>       <item>282</item> <item>102</item>
+        <item>12</item> <item>31</item> <item>102</item>       <item>249</item> <item>102</item>
+        <item>13</item> <item>59</item> <item>102</item>       <item>222</item> <item>102</item>
+        <item>14</item> <item>94</item> <item>102</item>       <item>187</item> <item>102</item>
+        <item>15</item> <item>137</item> <item>102</item>       <item>138</item> <item>102</item>
+
+    </integer-array>
+
+    <integer-array name="trans_coordinates">
+        <!--                        LEFT  HAND                          RIGHT   HAND      -->
+        <!--hold number     X coord         Y coord                 X coord        Y coord    -->
+        <item>1</item> <item>87</item> <item>9</item>       <item>240</item> <item>9</item>
+        <item>2</item> <item>77</item> <item>22</item>       <item>240</item> <item>22</item>
+        <item>3</item> <item>67</item> <item>33</item>       <item>240</item> <item>33</item>
+        <item>4</item> <item>57</item> <item>48</item>       <item>240</item> <item>48</item>
+        <item>5</item> <item>47</item> <item>57</item>       <item>240</item> <item>57</item>
+        <item>6</item> <item>37</item> <item>68</item>       <item>240</item> <item>68</item>
+        <item>7</item> <item>20</item> <item>80</item>       <item>240</item> <item>80</item>
+        <item>8</item> <item>15</item> <item>90</item>       <item>240</item> <item>90</item>
+        <item>9</item> <item>10</item> <item>100</item>       <item>240</item> <item>100</item>
+
+    </integer-array>
+    <integer-array name="tension_coordinates">
+        <!--                        LEFT  HAND                          RIGHT   HAND      -->
+        <!--hold number     X coord         Y coord                 X coord        Y coord    -->
+        <item>1</item> <item>8</item> <item>17</item>       <item>277</item> <item>17</item>
+        <item>2</item> <item>73</item> <item>34</item>       <item>208</item> <item>34</item>
+        <item>3</item> <item>139</item> <item>18</item>       <item>139</item> <item>18</item>
+        <item>4</item> <item>8</item> <item>68</item>       <item>208</item> <item>68</item>
+        <item>5</item> <item>73</item> <item>68</item>       <item>277</item> <item>68</item>
+        <item>6</item> <item>139</item> <item>68</item>       <item>139</item> <item>68</item>
+        <item>7</item> <item>8</item> <item>102</item>       <item>208</item> <item>102</item>
+        <item>8</item> <item>73</item> <item>102</item>       <item>277</item> <item>102</item>
+        <item>9</item> <item>139</item> <item>102</item>       <item>139</item> <item>102</item>
+
+    </integer-array>
+
+    <integer-array name="zlag_coordinates">
+        <!--                        LEFT  HAND                          RIGHT   HAND      -->
+        <!--hold number     X coord         Y coord                 X coord        Y coord    -->
+        <item>1</item> <item>4</item> <item>24</item>       <item>278</item> <item>24</item>
+        <item>2</item> <item>67</item> <item>32</item>       <item>218</item> <item>32</item>
+        <item>3</item> <item>143</item> <item>32</item>       <item>143</item> <item>32</item>
+        <item>4</item> <item>4</item> <item>53</item>       <item>278</item> <item>53</item>
+        <item>5</item> <item>67</item> <item>53</item>       <item>218</item> <item>53</item>
+        <item>6</item> <item>143</item> <item>53</item>       <item>143</item> <item>53</item>
+        <item>7</item> <item>4</item> <item>76</item>       <item>278</item> <item>76</item>
+        <item>8</item> <item>48</item> <item>76</item>       <item>233</item> <item>76</item>
+        <item>9</item> <item>85</item> <item>76</item>       <item>199</item> <item>76</item>
+        <item>10</item> <item>143</item> <item>76</item>       <item>143</item> <item>76</item>
+        <item>11</item> <item>143</item> <item>76</item>       <item>143</item> <item>76</item>
+        <item>12</item> <item>4</item> <item>93</item>       <item>278</item> <item>93</item>
+        <item>13</item> <item>48</item> <item>93</item>       <item>233</item> <item>93</item>
+        <item>14</item> <item>85</item> <item>93</item>       <item>199</item> <item>93</item>
+        <item>15</item> <item>143</item> <item>93</item>       <item>143</item> <item>93</item>
+
+
+    </integer-array>
+
+    <integer-array name="moonhard_coordinates">
+        <!--                        LEFT  HAND                          RIGHT   HAND      -->
+        <!--hold number     X coord         Y coord                 X coord        Y coord    -->
+        <item>1</item> <item>9</item> <item>34</item>       <item>275</item> <item>34</item>
+        <item>2</item> <item>73</item> <item>35</item>       <item>210</item> <item>35</item>
+        <item>3</item> <item>121</item> <item>34</item>       <item>172</item> <item>34</item>
+        <item>4</item> <item>9</item> <item>59</item>       <item>275</item> <item>59</item>
+        <item>5</item> <item>73</item> <item>58</item>       <item>210</item> <item>58</item>
+        <item>6</item> <item>9</item> <item>89</item>       <item>275</item> <item>89</item>
+        <item>7</item> <item>73</item> <item>80</item>       <item>210</item> <item>80</item>
+        <item>8</item> <item>140</item> <item>89</item>       <item>140</item> <item>89</item>
+
+
 
     </integer-array>
 
